Fix whitespace word break error

--- a/app/assets/stylesheets/components/common/_breadcrumb.scss
+++ b/app/assets/stylesheets/components/common/_breadcrumb.scss
@@ -12,7 +12,11 @@
   }
 }
 
-.breadcrumbs__divider:before {
+.breadcrumbs__link {
+  white-space: nowrap;
+}
+
+.breadcrumbs__divider:after {
   @extend %font-body;
   font-size: 32px;
   line-height: 0;
